# robotics_toolbox

./: .clang-format  .clang-tidy  .flake8  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  requirements.txt
.github/: CODEOWNERS  README.md
common/: CSVReader.cpp  CSVReader.h  DatasetReaderASRL.cpp  DatasetReaderASRL.h  DatasetReaderBase.cpp  DatasetReaderBase.h  FileInterface.cpp  FileInterface.h  GlobalTypesBase.h  GlobalTypesDerived.h  Tools.cpp  Tools.h
common/dataset_tools/: DatasetReader4Seasons.cpp  DatasetReader4Seasons.h  DatasetReaderASRL.cpp  DatasetReaderASRL.h  DatasetReaderASRLDevonIsland.cpp  DatasetReaderASRLDevonIsland.h  DatasetReaderBase.cpp  DatasetReaderBase.h  DatasetReaderKITTI.cpp  DatasetReaderKITTI.h
modules/: CMakeLists.txt
modules/environment_modeling/: CMakeLists.txt
modules/environment_modeling/libraries/libWPG/: CMakeLists.txt  LibraryInformation.json
modules/environment_modeling/libraries/libWPG/documentation/: libWPG_Doxyfile
modules/environment_modeling/libraries/libWPG/source_code/include/: LIBWPGVersion.h  WorldPointGeneratorBase.h  WorldPointGeneratorCuboid.h
modules/environment_modeling/libraries/libWPG/source_code/src/: LIBWPGVersion.cpp  WorldPointGeneratorBase.cpp  WorldPointGeneratorCuboid.cpp
modules/environment_modeling/libraries/libWPG/testing/google_test/: CMakeLists.txt
modules/environment_modeling/libraries/libWPG/testing/google_test/source_code/: Test_LIBWPGVersion.cpp  Test_WorldPointGeneratorBase.cpp  Test_WorldPointGeneratorCuboid.cpp  main.cpp
modules/environment_modeling/libraries/libWPG/versioning/: list_files.xml
modules/mapping_and_localization/: CMakeLists.txt
modules/mapping_and_localization/libraries/libFB/: CMakeLists.txt  LibraryInformation.json
modules/mapping_and_localization/libraries/libFB/documentation/: libFB_Doxyfile
modules/mapping_and_localization/libraries/libFB/source_code/include/: FeatureBucketerBase.h  FeatureBucketerByChance.h  FeatureBucketerByOrder.h  LIBFBVersion.h
modules/mapping_and_localization/libraries/libFB/source_code/src/: FeatureBucketerBase.cpp  FeatureBucketerByChance.cpp  FeatureBucketerByOrder.cpp  LIBFBVersion.cpp
modules/mapping_and_localization/libraries/libFB/testing/google_test/: CMakeLists.txt
modules/mapping_and_localization/libraries/libFB/testing/google_test/source_code/: Test_FeatureBucketerByChance.cpp  Test_FeatureBucketerByOrder.cpp  Test_LIBFBVersion.cpp  main.cpp
modules/mapping_and_localization/libraries/libFB/versioning/: list_files.xml
modules/mapping_and_localization/libraries/libFBVis/: CMakeLists.txt  LibraryInformation.json
modules/mapping_and_localization/libraries/libFBVis/documentation/: libFBVis_Doxyfile
modules/mapping_and_localization/libraries/libFBVis/source_code/include/: FeatureBucketerVisualizer.h  LIBFBVISVersion.h
modules/mapping_and_localization/libraries/libFBVis/source_code/src/: FeatureBucketerVisualizer.cpp  LIBFBVISVersion.cpp
modules/mapping_and_localization/libraries/libFBVis/testing/google_test/: CMakeLists.txt
modules/mapping_and_localization/libraries/libFBVis/testing/google_test/source_code/: Test_LIBFBVISVersion.cpp  main.cpp
modules/mapping_and_localization/libraries/libFBVis/testing/metrixplusplus/: file_configuration.json
modules/mapping_and_localization/libraries/libFBVis/versioning/: list_files.xml  list_versions.xml
modules/mapping_and_localization/libraries/libFM/: CMakeLists.txt  LibraryInformation.json
modules/mapping_and_localization/libraries/libFM/documentation/: libFM_Doxyfile
modules/mapping_and_localization/libraries/libFM/source_code/include/: FeatureMatcher.h  LIBFMVersion.h
modules/mapping_and_localization/libraries/libFM/source_code/src/: FeatureMatcher.cpp  LIBFMVersion.cpp
modules/mapping_and_localization/libraries/libFM/testing/cppcheck/: libFM.xml
modules/mapping_and_localization/libraries/libFM/testing/google_test/: CMakeLists.txt
modules/mapping_and_localization/libraries/libFM/testing/google_test/source_code/: Test_LIBFMVersion.cpp  main.cpp
modules/mapping_and_localization/libraries/libFM/versioning/: list_files.xml
scripts/: CheckCodeCoverage.py  CheckDoxygenCoverage.py  GenerateDoxygenDocumentation.py  GenerateVersionNumber.py  PrepareLibraryTemplates.py  PrepareLibraryVersionClass.py  RunClangFormat.py  RunClangTidy.py  RunCppcheck.py  RunLicenseHeaderCheck.py  RunMetrixPlusPlus.py
scripts/cppcheck/: CppcheckAnalyzer.py  CppcheckError.py  CppcheckErrorList.py  CppcheckResultsParser.py  CppcheckSeverity.py
scripts/file_collector/: FileCollector.py
scripts/library_finder/: LibraryFinder.py  LibraryInformation.py
scripts/metrixplusplus/: MetrixPlusPlusAnalyzer.py  MetrixPlusPlusMessage.py  MetrixPlusPlusMessageList.py  MetrixPlusPlusMetric.py  MetrixPlusPlusResultsParser.py
scripts/test_report_generators/: TestReportGeneratorBase.py  TestReportGeneratorCppcheck.py  TestReportGeneratorMetrixPlusPlus.py  TestVerdict.py
scripts/versioning/: FingerprintGenerator.py  VersionNumberGenerator.py
settings/clang_format/: file_configuration_all.json
settings/clang_tidy/: file_configuration_all.json
settings/cppcheck/: CppcheckDefault.json
settings/doxygen/: DoxyfileGlobal
settings/license_header/: file_configuration.json
settings/metrixplusplus/: MetrixplusplusDefault.json
templates/: Doxyfile  LIBVersion.cpp  LIBVersion.h  Test_LIBVersion.cpp
